--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
     "@react-navigation/native": "^7.1.18",
     "@react-navigation/stack": "^7.4.10",
     "expo": "~52.0.0",
+    "expo-asset": "~11.0.5",
     "expo-clipboard": "^8.0.7",
+    "expo-font": "~13.0.4",
     "expo-status-bar": "~2.0.0",
     "firebase": "^12.4.0",
     "react": "18.3.1",
