Update app configuration and dependencies
- Modified app.json to change splash background color and update icon paths.
- Added new dependencies in package.json and package-lock.json, including updates to existing packages.
- Removed CHECKLIST.md, PROJECT_SUMMARY.md, QUICK_START.md, and SETUP_GUIDE.md as part of project restructuring.
- Enhanced README.md with setup instructions and troubleshooting tips.

--- a/app.json
+++ b/app.json
@@ -4,26 +4,23 @@
     "slug": "movie-tracker",
     "version": "1.0.0",
     "orientation": "portrait",
-    "icon": "./assets/icon.png",
     "userInterfaceStyle": "light",
     "splash": {
-      "image": "./assets/splash.png",
       "resizeMode": "contain",
-      "backgroundColor": "#ffffff"
+      "backgroundColor": "#007AFF"
     },
     "ios": {
       "supportsTablet": true,
       "bundleIdentifier": "com.movietracker.app"
     },
     "android": {
+      "package": "com.movietracker.app",
       "adaptiveIcon": {
-        "foregroundImage": "./assets/adaptive-icon.png",
-        "backgroundColor": "#ffffff"
-      },
-      "package": "com.movietracker.app"
+        "backgroundColor": "#007AFF"
+      }
     },
     "web": {
-      "favicon": "./assets/favicon.png"
+      "bundler": "metro"
     },
     "plugins": [
       "expo-asset",
