--- a/package.json
+++ b/package.json
@@ -9,25 +9,28 @@
     "web": "expo start --web"
   },
   "dependencies": {
-    "@react-native-async-storage/async-storage": "^1.24.0",
-    "@react-native-community/datetimepicker": "^8.4.5",
+    "@expo/metro-runtime": "~6.1.2",
+    "@react-native-async-storage/async-storage": "2.2.0",
+    "@react-native-community/datetimepicker": "8.4.4",
     "@react-navigation/bottom-tabs": "^7.4.9",
     "@react-navigation/native": "^7.1.18",
     "@react-navigation/stack": "^7.4.10",
-    "expo": "~52.0.0",
-    "expo-asset": "~11.0.5",
-    "expo-clipboard": "^8.0.7",
-    "expo-font": "~13.0.4",
-    "expo-status-bar": "~2.0.0",
+    "expo": "^54.0.13",
+    "expo-asset": "~12.0.9",
+    "expo-clipboard": "~8.0.7",
+    "expo-font": "~14.0.9",
+    "expo-status-bar": "~3.0.8",
     "firebase": "^12.4.0",
-    "react": "18.3.1",
-    "react-native": "0.76.5",
+    "react": "19.1.0",
+    "react-dom": "19.1.0",
+    "react-native": "0.81.4",
     "react-native-chart-kit": "^6.12.0",
-    "react-native-gesture-handler": "^2.28.0",
+    "react-native-gesture-handler": "~2.28.0",
     "react-native-modal-datetime-picker": "^18.0.0",
-    "react-native-safe-area-context": "^5.6.1",
-    "react-native-screens": "^4.17.1",
-    "react-native-svg": "^15.14.0"
+    "react-native-safe-area-context": "~5.6.0",
+    "react-native-screens": "~4.16.0",
+    "react-native-svg": "15.12.1",
+    "react-native-web": "^0.21.0"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
