--- a/.gitignore
+++ b/.gitignore
@@ -1,33 +1,139 @@
 # Expo
 .expo/
+.expo-shared/
 dist/
 web-build/
+expo-env.d.ts
 
 # Dependencies
 node_modules/
+.pnp
+.pnp.js
+
+# Package manager files
+package-lock.json
+yarn.lock
+pnpm-lock.yaml
+.yarn/
+.npm/
+
+# iOS
+ios/
+*.pbxuser
+!default.pbxuser
+*.mode1v3
+!default.mode1v3
+*.mode2v3
+!default.mode2v3
+*.perspectivev3
+!default.perspectivev3
+xcuserdata
+*.xccheckout
+*.moved-aside
+DerivedData
+*.hmap
+*.ipa
+*.xcuserstate
+project.xcworkspace
+ios/Pods/
+**/*.xcworkspace
+
+# Android
+android/
+*.apk
+*.aab
+*.ap_
+*.dex
+build/
+.gradle
+local.properties
+*.iml
+.externalNativeBuild
+.cxx/
 
 # Environment
 .env
 .env.local
 .env.*.local
+.env.development
+.env.production
+.env.test
 
 # macOS
 .DS_Store
+.AppleDouble
+.LSOverride
+._*
 
-# IDE
+# Windows
+Thumbs.db
+ehthumbs.db
+Desktop.ini
+
+# Linux
+*~
+
+# IDE - VSCode
 .vscode/
+*.code-workspace
+
+# IDE - IntelliJ
 .idea/
+*.iws
+out/
+
+# IDE - Eclipse
+.classpath
+.project
+.settings/
 
 # Logs
 *.log
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+lerna-debug.log*
+.pnpm-debug.log*
 
-# Build
+# Testing
+coverage/
+.nyc_output
+.jest/
+
+# Temporary files
+*.swp
+*.swo
+*~
+.tmp/
+.cache/
+temp/
+
+# Build artifacts
 *.jks
 *.p8
 *.p12
 *.key
 *.mobileprovision
 *.orig.*
+*.tgz
+
+# Debugging
+.vscode/launch.json
+.vscode/settings.json
+
+# TypeScript
+*.tsbuildinfo
+
+# Optional npm cache directory
+.npm
+
+# Optional eslint cache
+.eslintcache
+
+# Firebase
+.firebase/
+firebase-debug.log
+firestore-debug.log
+
+# Sentry
+.sentryclirc
