chore: update app.json with new bundle and package identifiers
- Changed iOS bundleIdentifier from "com.movietracker.app" to "com.evgenypavlov.movietracker".
- Updated Android package name from "com.movietracker.app" to "com.evgenypavlov.movietracker" for consistency.

--- a/app.json
+++ b/app.json
@@ -15,11 +15,11 @@
 
     "ios": {
       "supportsTablet": true,
-      "bundleIdentifier": "com.movietracker.app"
+      "bundleIdentifier": "com.evgenypavlov.movietracker"
     },
 
     "android": {
-      "package": "com.movietracker.app",
+      "package": "com.evgenypavlov.movietracker",
       "adaptiveIcon": {
         "foregroundImage": "./assets/icon.png",
         "backgroundColor": "#007AFF"
