--- a/app.json
+++ b/app.json
@@ -1,6 +1,6 @@
 {
   "expo": {
-    "name": "Egor App",
+    "name": "FilmVault",
     "slug": "movie-tracker",
     "version": "1.0.0",
     "orientation": "portrait",
